
	--
	
    * #69993: Additional string format checks for logging module:
      check for missing arguments, too many arguments, or invalid string
      formats in the logging checker module. Contributed by Daniel Arena
	
    * #69220: add column offset to the reports. If you've a custom reporter,
      this change may break it has now location gain a new item giving the
      column offset.

2011-01-11  --  0.23.0
    * documentation update, add manpages

    * several performance improvements

    * finalize python3 support

    * new W0106 warning 'Expression "%s" is assigned to nothing'

    * drop E0501 and E0502 messages about wrong source encoding: not anymore
     interesting since it's a syntax error for python >= 2.5 and we now only
     support this python version and above.

    * don't emit W0221 or W0222 when methods as variable arguments (eg *arg
     and/or **args). Patch submitted by Charles Duffy.



2010-11-15  --  0.22.0
    * python versions: minimal python3.x support; drop python < 2.5 support



2010-10-27  --  0.21.4
    * fix #48066: pylint crashes when redirecting output containing non-ascii characters

    * fix #19799: "pylint -blah" exit with status 2

    * update documentation



2010-09-28  --  0.21.3
    * restored python 2.3 compatibility. Along with logilab-astng
      0.21.3 and logilab-common 0.52, this will much probably be the
      latest release supporting python < 2.5.



2010-08-26  --  0.21.2
    * fix #36193: import checker raise exception on cyclic import

    * fix #28796: regression in --generated-members introduced pylint 0.20

    * some documentation cleanups



2010-06-04  --  0.21.1
    * fix #28962: pylint crash with new options, due to missing stats data while
      writing the Statistics by types report

    * updated man page to 0.21 or greater command line usage (fix debian #582494)



2010-05-11  --  0.21.0
    * command line updated (closes #9774, #9787, #9992, #22962):
